Issue #2240283 by eshta: Fix missing border shadow in admin in specific themes.

--- a/css/navbar.module.css
+++ b/css/navbar.module.css
@@ -266,6 +266,7 @@ body.navbar-tray-open.navbar-fixed.navbar-vertical #navbar-administration.navbar
   position: fixed;
   top: 0;
   width: 240px;
+  height: auto;
   z-index: -1;
 }
 /* Hide secondary menus when the tray is horizontal. */
